# base5

./: .gitignore  CMakeLists.txt  README.md
src/assets/: cst2.xml
src/gtest/: CMakeLists.txt  MathTestHarness.cpp  NodesTestHarness.cpp  NodesTestHarness.hpp  RandomGenTestHarness.cpp  RandomGenTestHarness.h  SceneFileLoaderTestHarness.cpp  SceneFileLoaderTestHarness.hpp  SceneTestHarness.cpp  SceneTestHarness.hpp  TinyXMLPrototypeTestHarness.cpp  TinyXMLPrototypeTestHarness.h  Vector3TestHarness.h  gtest_main.cpp
src/loader/: CMakeLists.txt  LoaderExceptions.hpp  NoOppDeleter.hpp  SceneFileLoader.cpp  SceneFileLoader.hpp  SceneFileTreeView.cpp  SceneFileTreeView.h  TinyXMLPrototype.cpp  TinyXMLPrototype.hpp
src/maths/: BitMan.h  Maths.cpp  Maths.h  Quaternion.cpp  Quaternion.h  RandGen.cpp  RandGen.h  Vector3.cpp  Vector3.h
src/scene/: A.cpp  A.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  Light.cpp  Light.h  Node.cpp  Node.hpp  Nodes.cpp  Nodes.hpp  Scene.cpp  Scene.hpp  SceneExceptions.hpp
src/testfiles/: extendedTest.scene
src/ui/: CMakeLists.txt  CSTParser.cpp  CSTParser.h  CSTTreeView.cpp  CSTTreeView.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  MyGLCanvas.cpp  MyGLCanvas.h  Timer.cpp  Timer.h
src/ui/cst_model/: ADP.h  ADR.h  ADSE.h  Dean.h  Department.h  DeputyDean.h  HoD.h  SROM.h  School.h  StaffMember.h
src/ui/opengl/: ArcballCamera.cpp  ArcballCamera.h  PrincipleAxesModel.cpp  PrincipleAxesModel.h  ViewFrustum.cpp  ViewFrustum.h  shader_setup.cpp  shader_setup.h
